[project]
name = "sbsde"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "reppy4620", email = "ilikeniku@icloud.com" }
]
dependencies = [
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "matplotlib>=3.8.3",
    "tqdm>=4.66.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "jupyterlab>=4.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sbsde"]
